# Otus.Cpp.Homework16

./: .travis.yml  CMakeLists.txt  README.md  functions.cpp  functions.h  rclss.cpp  rclst.cpp  realty.h  types.h
